.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

3.3rc1 - UNRELEASED
-------------------

 - Fixed the registerIndexableAttribute() backwards-compatibility shim to
   register named adapters.
   [optilude]

 - Re-added the 'getRemoteUrl' and 'link_remote' attributes of the navtree
   decorator, which were lost during the implementation of PLIP 126.  Note
   that these attributes are deprecated and will not be available in Plone 4.
   Custom navigation templates using these attributes should simply link to
   the Link object, whose default view now takes care of redirecting based on
   the value of the global 'redirect_links' property.
   [davisagli]

 - Make the Groups Overview search post back to the same page, since it displays a
   lot more useful information than the prefs_user_group_search, and fits more
   with the way the Users Overview works. Include a "Show all" button as well. 
   [esteele]


3.3b1 - March 12, 2009
----------------------

- Replace the workflow history portlet with a content history portlet
  for newly created sites. This implements PLIP 243.
  [wichert]

- Changed most actions to now use the globals_view/navigationRootUrl. Updated
  the CMFCalendar tool override to allow the calendar portlet to allow passing
  in kwargs such as path.  Fixed skin templates and scripts to use the
  @@plone_portal_state/navigation_root_url instead of portal_url.
  This implements http://plone.org/products/plone/roadmap/234
  [calvinhp]
 
- Removed CatalogTool.ExtensibleIndexableObjectWrapper in favour of the
  wrapper in plone.indexer, and made registerIndexableAttribute() a deprecated
  facade for registering an IIndexer adapter. See plone.indexer for more
  information about the correct (and more robust) way to register custom
  indexers.
  [optilude]
