@@ -1,10 +1,27 @@
 <configure xmlns="http://namespaces.zope.org/zope" i18n_domain="plone">
     
     <!-- Register the default indexable object wrapper -->
+    
+    <!-- The default indexable object wrapper, provided by plone.indexer.
+         This one is forwards compatible with CMF 2.2. The IIndexableObject
+         interface is a conditional import of the CMF 2.2 version, with a
+         shim provided for compatibility with CMF 2.1.
+      -->
     <adapter
-        for="* .interfaces.IPloneSiteRoot"
+        for="* Products.CMFCore.interfaces.ICatalogTool"
         factory="plone.indexer.wrapper.IndexableObjectWrapper"
+        provides="plone.indexer.interfaces.IIndexableObject"
         />
+    
+    <!-- BBB: The old wrapper would be registered like this. It should still work
+         for compatibility, but since it takes precedence over the new wrapper
+         we don't register it.
+      -->
+    <!-- adapter
+        for="* .interfaces.IPloneSiteRoot"
+        factory=".CatalogTool.ExtensibleIndexableObjectWrapper"
+        provides="plone.app.content.interfaces.IIndexableObjectWrapper"
+        / -->
         
     <!-- Register the default indexers -->
     <adapter factory=".CatalogTool.allowedRolesAndUsers"   name="allowedRolesAndUsers" />
